added integration for product endpoints.